Combined the forms into one.

--- a/enginetest/templates/index.html
+++ b/enginetest/templates/index.html
@@ -3,31 +3,24 @@
 <head>
 <script type="text/javascript" src="{% static 'engine.js' %}"></script>
 <script type="text/javascript">
-function getajax()
+function make_request()
 {
     var form = document.getElementById("test_form");
-    var format = form["format"].value;
-    if (format === "json")
-      http.get("getjson/", callback);
-    else if (format === "xml")
-      http.get("getxml/", callback);
-}
-
-function postajax()
-{
-    var form = document.getElementById("test_post_form");
     var csrf_token = form["csrfmiddlewaretoken"].value;
     var first_name = form["first_name"].value;
     var format = form["format"].value;
+    var method = form["method"].value;
 
     params = new Object();
     params["first_name"] = first_name;
     params["csrfmiddlewaretoken"] = csrf_token;
 
-    if (format === "json")
-      http.post("postjson/", callback, params);
-    else if (format === "xml")
-      http.post("postxml/", callback, params);
+    var url = method.toLowerCase() + format.toLowerCase() + "/";
+
+    if (method.toLowerCase() === "get")
+      http.get(url, callback);
+    else if (method.toLowerCase() === "post")
+      http.post(url, callback, params);
 }
 
 function callback(obj)
@@ -35,30 +28,35 @@ function callback(obj)
     console.log(obj);
 }
 </script>
+<style type="text/css">
+
+</style>
 </head>
 <body>
-<p>{{ now }}</p>
-<p>
-  <form id="test_form">
-    <label>JSON</label>
-    <input type="radio" name="format" value="json" checked="checked" />
-    <label>XML</label>
-    <input type="radio" name="format" value="xml">
-    <input type="button" value="Get Ajax" onclick="getajax();" />
-  </form>
-</p>
-<hr />
-<p>
-  <form id="test_post_form">
-    {% csrf_token %}
-    <label>JSON</label>
-    <input type="radio" name="format" value="json" checked="checked" />
-    <label>XML</label>
-    <input type="radio" name="format" value="xml">
-    <br />
-    <input type="text" name="first_name" />
-    <input type="button" value="Post Ajax" onclick="postajax();" />
-  </form>
-</p>
+<div id="header">
+  <p>Server Time:<br />{{ now }}</p>
+</div>
+<div>
+  <p>
+    <form id="test_form">
+      {% csrf_token %}
+      <p class="label-header">Format</p>
+      <label>JSON</label>
+      <input type="radio" name="format" value="json" checked="checked" />
+      <label>XML</label>
+      <input type="radio" name="format" value="xml">
+      <p class="label-header">Method</p>
+      <label>GET</label>
+      <input type="radio" name="method" value="GET" checked="checked" />
+      <label>POST</label>
+      <input type="radio" name="method" value="POST">
+      <p class="label-header">Data</p>
+      <input type="text" name="first_name" />
+      <br />
+      <br />
+      <input type="button" value="Make Request" onclick="make_request()" />
+    </form>
+  </p>
+</div>
 </body>
 </html>
